--- a/config/config-emb512.json
+++ b/config/config-emb512.json
@@ -4,6 +4,7 @@
     "batch_size": 16,
     "lr": 0.00005,
     "lr_warmup": 15000,
+    "dropout":0.0,
     "epochs": 100000,
     "sample_length": 128,
     "embedding_size": 512,
